--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     config:
       server:
         native:
-          search-locations: file:///C:\Users\FAISAL\Desktop\courses\embarkx\Microservices\ecom-microservices\configserver\src\main\resources\config
+          search-locations: file:///c:\Temp\configserver\ecom-microservices\configserver\src\main\resources\config\
 
 server:
   port: 8888
