--- a/additional/config-mgmt/configdemo/src/main/resources/application.yml
+++ b/additional/config-mgmt/configdemo/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   config:
     import: optional:configserver:http://localhost:8888
   profiles:
-    active: dev
+    active: test
 
 build:
   id: ${ID}
